Removed some Eclipse warnings